--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      
+      - name: Install PM2
+        run: npm install pm2
 
       - name: Test application
         run: npm test
